--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "leaflet": "^1.7.1",
     "next": "11.0.1",
+    "next-pwa": "^5.2.23",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-leaflet": "^3.2.0"
